--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,12 @@ body {
 	font-weight: 300;
 	color: #1a1a1a;
 }
-.axislabels {
+.axisLabels {
 	font-size: 18px;
+}
+#xAxis {
+	text-align: center;
+	margin-top: 0;	
 }
 .titleSpace {
 	position: absolute;
@@ -153,6 +157,18 @@ body {
 	bottom: 0;
 	border-left: 1px solid white;
 	cursor: pointer;
+}
+.yellowButton {
+	background-color: #fff3bf;
+}
+.yellowBackground {
+	background-color: #fffae5;	
+}
+.redButton {
+	background-color: #e68a8a;	
+}
+.redBackground {
+	background-color: #fff3f3;	
 }
 #button1 {
 	position: absolute;
